--- a/MITx MicroMaster in Statistic and DataScience/Cheatsheet/CheatSheet1.tex
+++ b/MITx MicroMaster in Statistic and DataScience/Cheatsheet/CheatSheet1.tex
@@ -550,13 +550,73 @@ $$\pi\left(\theta|X_1,\dots,X_n\right)\propto\pi(\theta)L_n(X_1,\dots,X_n|\theta
 					When we use the {\it canonical link function}, we obtain the expression
 					$$\ell_n\left(\mathbf{Y},\mathbb{X},\beta\right)=\sum_{i}\dfrac{Y_iX_i^\intercal\beta-b\left(X_i^\intercal\beta\right)}{\phi}+\text{constant}$$
 				\end{description}
-
 		\end{itemize}
-
 \end{description}
 
+\section{Counting}
+\begin{enumerate}
+\item[\bf Selection] For a selection that can be done in r stages, wight $n_i$ choices at each stage i, the number of possible selection is: $n_1n_2...n-_r$
+\item[\bf Permutation] \# of ways of ordering n distinct elements: $n!=1*2*3...n$
+\item[\bf Combinations] Give a set of n elements, number of ways of constructing an {\bf ordered} sequence of k {\bf distinct} element (result order does not matter): $\binom{n}{k}=\frac{n!}{k!(n-k)!}$
+\item[\bf Subsets] for subset of $\{1,...,n\}$: $\sum_{k=0}^{n}\binom{n}{k}=\binom{n}{0}+\cdots+\binom{n}{n}=2^n.$
+\item[\bf Partitions] $\frac{n!}{n_1!n_2!\dots n_r!}.$
+\end{enumerate}
+
+\section{Bernoulli Process}
+\begin{description}
+	\item[Def.] A sequence of Bournoulli trials $X_i$ (independence + time-homogeneity)
+	\item[First Arrival] Time of first arrival
+		\begin{itemize}
+			\item $T_1 = min\{i: X_i=1\}$
+			\item $\mathbb{P}(T_1=k) = (1-p)^{k-1}p$
+			\item $\mathbb{E}(T_1) = \dfrac{1}{p}$
+			\item $var(T_1) = \dfrac{1-p}{p^2}$
+		\end{itemize}
+	\item[Memoryless] Fresh start after a random time N. $X_{N+1}, X_{N+2}, ...$ is a Bernoulli Process independent of N, $X_1, ... ,X_N$
+	\item[K-th Arrival]~
+		\begin{itemize}
+			\item i-th inter-arrival time $T_i =Y_i - Y_{i-1} \sim Gep(p)$ and independent with $T_j$
+			\item $\mathbb{E}[Y_k]=\dfrac{k}{p}, var(Y_k)=\dfrac{k(1-p)}{p^2}$
+			\item $\mathbb{P}_{Y_k}= \binom{t-1}{k-1}p^k(1-p)^{t-k}$
+		\end{itemize}
+	\item[Possion appro] Total number of arrivals converge to Poisson distribution for large n, small p and moderate $\lambda=np$
+\end{description}
+
+\section{Poisson Process}
+\begin{description}
+	\item[Prob of k arrivals in duration $\delta$] ($\lambda$ is arrival rate, $\tau = n \delta$, $N_{\tau}$ is binomial and converge to Poisson) Then $\mathbb{P}(k, \delta)=$
+		$$\begin{cases}
+				1 - \lambda \delta + O(\delta^2) \qquad\text{if k=0}\\[10pt]
+				\lambda \delta + O(\delta^2)\qquad \text{if k=1}\\[10pt]
+				0 + O(\delta^2) \qquad \text{if k$>$1}
+		\end{cases}$$
+
+		$$\mathbb{P}(k,\tau) = \mathbb{P}(N_{\tau}) = \dfrac{1}{k!}$$
+
+	\item[Time until first arrival] $T_1 \sim Exp(\lambda)$
+
+	\item[Time $Y_k$ of the kth arrival]~
+		\begin{itemize}
+			\item Sum of independent Exp $Y_k = T_1 + T_2 + ... + T_k$
+			\item $\mathbb{P}(Y_k \leq y) = \sum_{n=k}^{\infty}\mathbb{P}(n, y)$
+			\item $Y_k \sim Erlang(k),  f_{Y_k}(y) = \dfrac{\lambda^k y^{k-1} e^{-\lambda y} }{(k-1)!}$
+			\item $\mathbb{E}[Y_k] = \dfrac{k}{\lambda}, var(Y_k)=\dfrac{k}{\lambda^2}$
+		\end{itemize}
+	\item[Memoryless]~
+		Starting from a constant time t or a certain arrival $T_k$ (k is a constant), the following is a poisson process independent with history. Can divide time line and conque separately
+	\item[Merge]~
+		\begin{itemize}
+			\item Sum of two Poisson process is a poisson process of parameter $\mu + v$
+			\item $\mathbb{P}(kth - 1st) = \dfrac{\lambda_1}{\lambda_1 + \lambda_2}$
+			\item k of N arrivals are first = $\binom{N}{k}(\dfrac{\lambda_1}{\lambda_1 + \lambda_2})^k (\dfrac{\lambda_2}{\lambda_1 + \lambda_2})^{N-k}$
+			\item Assume X, Y, Z are time until first arrival of 3 poisson process $\min(X, Y, Z) \sim Poisson(\lambda_1 + \lambda_2 + \lambda_3)$
+		\end{itemize}
+	\item[Split]~
+		A poisson process can be splited in to Poisson($\lambda q$) and Poisson($\lambda (1-q)$). And the resulting 2 proceses are independent
+	\item[Random Incidence]~ 
+		Arrival at constant $t^{\star}$ U, V are time of last and next arrival.
+		$$(V - t^{\star}) , (t^{\star} - U) \sim Exp(\lambda)$$
+\end{description}
 
 \end{multicols*}
-
-
 \end{document}
